# legendary-super-ultra-red-dragon

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
datasets/: README.md  llm_required_merges_hunks.jsonl
demo/: README.md  playground_setup.py  run_demo.py
demo/.shim-src/: make_shim.c
docs/: multilang.md  sandbox-node-modules-fix.md
results/overnight-0721/: b2_mismatch_audit.md  overnight_report.md  track_a.jsonl  track_a_hunks.jsonl  track_b2_real.jsonl  track_b_seeded.jsonl
scripts/demo/: make_deploy_repo.py  make_playground.py  run_all_scenarios.py  timed_structural_demo.py
scripts/overnight/: aggregate_report.py  build_hunk_dataset.py  track_a_gt_replication.py  track_b2_real.py  track_b_seeded.py
src/weld/: cli.py  langs.py  types.py
src/weld/candidates/: __init__.py  generate.py  summarize.py
src/weld/classify/: __init__.py  mergiraf.py
src/weld/escalate/: __init__.py  report.py
src/weld/evaluation/: __init__.py  cases.py  harness.py  measure_spurious.py  metrics.py  mining.py  multilang.py
src/weld/policy/: __init__.py  trust.py
src/weld/verify/: __init__.py  callgraph.py  impact.py  mutation.py  mutation_ts.py  sandbox.py
tests/: test_cli.py  test_integration.py  test_langs.py
tests/candidates/: test_generate.py  test_summarize.py
tests/classify/: test_mergiraf.py
tests/escalate/: test_report.py
tests/evaluation/: test_dataset_io.py  test_metrics.py  test_mining.py
tests/policy/: test_trust.py
tests/verify/: test_callgraph.py  test_impact.py  test_impact_union_green.py  test_mutation.py  test_mutation_c.py  test_mutation_ts.py  test_sandbox.py
