[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weld"
version = "0.1.0"
description = "검증되지 않은 git 병합은 자동으로 착지하지 못하게 막는 무결성 안전장치"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "docker>=7.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "coverage>=7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
weld = "weld.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weld"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
