[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weld"
version = "0.1.0"
description = "검증되지 않은 git 병합은 자동으로 착지하지 못하게 막는 무결성 안전장치"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "docker>=7.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "coverage>=7.0",
    "pyyaml>=6.0",
    # 다국어 뮤테이션 엔진(verify/mutation_ts.py)용. 미설치 시 엔진은 '신호
    # 없음'으로 폴백해 Python 전용으로 동작하지만, JS/TS/C/C++ 뮤테이션을
    # 기본 제공하려면 필요하다. language-pack이 tree-sitter 코어를 끌어온다.
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
weld = "weld.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weld"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
